<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    >

    <include
        android:id="@+id/id_header"
        layout="@layout/header"/>
    <LinearLayout
        android:layout_below="@id/id_header"
        android:id="@+id/id_liner_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/id_about_version"
            android:layout_marginTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/black_notdark"
            android:text="1.0rc2"/>
    </LinearLayout>
    <TextView
        android:id="@+id/id_about_introduce"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/black_notdark"
        android:layout_below="@id/id_liner_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/aboutUI"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="8dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textColor="@color/black_notdark"
            android:text="@string/about_vesion_warning"/>
        <TextView
            android:id="@+id/id_about_tx2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textColor="@color/black_notdark"
            android:text="@string/about_vesion_warning2"/>

    </LinearLayout>



</RelativeLayout>