<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:iconF="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/container_background"
    android:clickable="true"
    >

    <ImageView
        android:id="@+id/id_slide_Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:src="@mipmap/slidemenu_logo"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/id_slide_Logo"
        android:layout_marginTop="80dp"
        >
        <LinearLayout
            android:id="@+id/id_slide_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="12dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            >
            <com.starv.tvindex.util.view.IconView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/tabhost_right"
                android:text="@string/slideMenu_dot"
                iconF:iconType="xha_font"
                android:textSize="@dimen/slide_menu_size"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:layout_marginLeft="19dp"
                android:textColor="@color/slide_menu"
                android:textSize="@dimen/slide_menu_size"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"

            />
        <LinearLayout
            android:id="@+id/id_slide_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="12dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            >
            <com.starv.tvindex.util.view.IconView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/tabhost_right"
                android:text="@string/slideMenu_dot"
                iconF:iconType="xha_font"
                android:textSize="@dimen/slide_menu_size"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:layout_marginLeft="19dp"
                android:textColor="@color/slide_menu"
                android:textSize="@dimen/slide_menu_size"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"

            />
        <LinearLayout
            android:id="@+id/id_slide_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="12dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            >
            <com.starv.tvindex.util.view.IconView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/tabhost_right"
                android:text="@string/slideMenu_dot"
                iconF:iconType="xha_font"
                android:textSize="@dimen/slide_menu_size"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:layout_marginLeft="19dp"
                android:textColor="@color/slide_menu"
                android:textSize="@dimen/slide_menu_size"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"

            />
        <LinearLayout
            android:id="@+id/id_slide_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            >
            <com.starv.tvindex.util.view.IconView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/tabhost_right"
                android:text="@string/slideMenu_dot"
                iconF:iconType="xha_font"
                android:textSize="@dimen/slide_menu_size"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:layout_marginLeft="15dp"
                android:textColor="@color/slide_menu"
                android:textSize="@dimen/slide_menu_size"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:visibility="gone"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:background="@drawable/slide_share_frame"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="@color/slide_menu"
                android:text="分享APP"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <com.starv.tvindex.util.view.IconView
                    android:id="@+id/id_weixinCircle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/tabhost_right"
                    android:textSize="30sp"
                    iconF:iconType="xha_font"
                    android:text="@string/slideMenu_share_wxcicle"
                    />
                <com.starv.tvindex.util.view.IconView
                    android:id="@+id/id_weixin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/tabhost_right"
                    android:textSize="30sp"
                    android:layout_marginLeft="10dp"
                    iconF:iconType="xha_font"
                    android:text="@string/slideMenu_share_wx"
                    />
                <com.starv.tvindex.util.view.IconView
                    android:id="@+id/id_qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/tabhost_right"
                    android:textSize="30sp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/slideMenu_share_qq"
                    iconF:iconType="xha_font"
                    />
                <com.starv.tvindex.util.view.IconView
                    android:id="@+id/id_weibo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/tabhost_right"
                    android:textSize="30sp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/slideMenu_share_weibo"
                    iconF:iconType="xha_font"
                    />
            </LinearLayout>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="电话:021-54262011"
            android:textSize="12sp"
            android:textColor="@color/nav_font_color_selected"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="邮箱:Media@star-v.com.cn"
            android:textSize="12sp"
            android:textColor="@color/nav_font_color_selected"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="上海星红桉数据科技有限公司版权所有"
            android:textSize="12sp"
            android:textColor="@color/nav_font_color_selected"/>
    </LinearLayout>
</RelativeLayout>